--- a/project.yaml
+++ b/project.yaml
@@ -6,3 +6,9 @@ actions:
     outputs:
       highly_sensitive:
         dataset: output/dataset.csv.gz
+  generate_report:
+    run: r:v2 analysis/report.r
+    needs: [generate_dataset]
+    outputs:
+      moderately_sensitive:
+        chart: output/reportr.png
